<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gablind</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TitreScreen1">Accueil</string>
    <string name="Approchez">Veuillez approcher votre carte </string>
    <string name="pin">Saisissez votre code PIN</string>
    <string name="quelleoperation">Quelle opération souhaitez-vous effectuer ?</string>
    <string name="retrait20">Retrait 20Euros</string>
    <string name="retraitautre">Retrait autre montant</string>
    <string name="annuler">Annuler</string>
    <string name="solde">Consultation solde</string>
    <string name="autreoperation">Autre opération</string>
    <string name="end">Merci et à bientôt...</string>
    <string name="choixmontant">Choisissez votre montant</string>
    <string name="add">Ajouter un client</string>
    <string name="id">id:</string>
    <string name="nom">Nom:</string>
    <string name="soldeText">Solde:</string>
    <string name="valid">Valider</string>
    <string name="home">Home</string>
    <string name="goodBye">Good Bye</string>
    <string name="admin">Admin</string>
    <string name="authentication">Authentication</string>
    <string name="menu">Menu</string>
    <string name="withdraw">Withdraw money</string>
<<<<<<< HEAD
    <string name="menuDescription">Choississez l\'action à effectuer.</string>
    <string name="withdraw20euros">1 : Retirer 20 euros.</string>
    <string name="otherWithdraw">2 : Retrait autre montant.</string>
    <string name="getBalance">3 : Solde de vos contes.</string>
    <string name="otherOperation">4 : Autre opération.</string>
=======
    <string name="withdrawmoneyDescription">Saisissez votre montant </string>
    
    
>>>>>>> 124fe25363e079e184d7d53cd8497315846e5bd7

</resources>