<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".AccueilActivity"
    android:id="@+id/layoutMenu" >

    <TextView
        android:id="@+id/quelleoperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginBottom="50dp"
        android:text="@string/quelleoperation"
        android:contentDescription="@string/menuDescription" />
    
    <Button
        android:id="@+id/menubutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quelleoperation"
        android:layout_alignParentLeft="true"
        android:width="400dp"
        android:height="110dp"
        android:text="@string/retrait20"
        android:textColor="#FFFFFF"
        android:background="#80695FEE"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:contentDescription="@string/withdraw20euros"
      />
    
    <Button
        android:id="@+id/menubutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menubutton1"
        android:layout_alignParentLeft="true"
        android:width="400dp"
        android:height="110dp"
        android:text="@string/retraitautre"
        android:textColor="#FFFFFF"
        android:background="#80695FEE"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:contentDescription="@string/otherWithdraw"
       />
    
    <Button
        android:id="@+id/menubutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quelleoperation"
        android:layout_alignParentRight="true"
        android:width="400dp"
        android:height="110dp"
        android:text="@string/solde"
        android:textColor="#FFFFFF"
        android:background="#80695FEE"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:contentDescription="@string/getBalance"
	 />
    
    <Button
        android:id="@+id/menubutton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menubutton3"
        android:layout_alignParentRight="true"
        android:width="400dp"
        android:height="110dp"
        android:text="@string/autreoperation"
        android:textColor="#FFFFFF"
        android:background="#80695FEE"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:contentDescription="@string/otherOperation"
    />
    
    <Button
        android:id="@+id/menubuttoncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menubutton2"
        android:layout_alignParentLeft="true"
        android:width="400dp"
        android:height="110dp"
        android:text="@string/annuler"
        android:textColor="#FFFFFF"
        android:background="#60695FEE"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:visibility="gone"
        android:contentDescription=""
      />

</RelativeLayout>