<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccueilActivity" 
    android:background="@drawable/accueil"
    android:id="@+id/layoutHome">
    
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#000000"
        android:text="@string/TitreScreen1" />
     
    <TextView
        android:id="@+id/approchez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:textSize="40sp"
        android:textColor="#000000"
        android:layout_marginLeft="100dp"
        android:text="@string/Approchez" />
    
    <Button
        android:id="@+id/adminButton"
        android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
     	android:layout_marginLeft="850dp"
     	android:layout_marginTop="360dp"
     	android:text="@string/admin"
     	android:background="#60695FEE"
     	android:onClick="admin"/>

</RelativeLayout>