<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAdmin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040037"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccueilActivity" >

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/nameField2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nom"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:ems="10"
        android:width="200dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/pin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add"
        android:layout_marginRight="35dp"
        android:layout_toLeftOf="@+id/add"
        android:text="@string/pin2"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pin2"
        android:layout_centerVertical="true"
        android:text="@string/nom"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/soldetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nom"
        android:layout_below="@+id/nom"
        android:layout_marginTop="50dp"
        android:text="@string/soldeText"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/pinField3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pin2"
        android:layout_alignBottom="@+id/pin2"
        android:layout_alignLeft="@+id/nameField2"
        android:layout_alignRight="@+id/nameField2"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <EditText
        android:id="@+id/soldeField3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/soldetext"
        android:layout_alignBottom="@+id/soldetext"
        android:layout_alignLeft="@+id/nameField2"
        android:layout_alignRight="@+id/nameField2"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/soldetext"
        android:layout_marginTop="25dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/iptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/soldetext"
        android:layout_below="@+id/soldetext"
        android:layout_marginTop="50dp"
        android:text="IP"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/ipField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/iptext"
        android:layout_alignBottom="@+id/iptext"
        android:layout_alignLeft="@+id/nameField2"
        android:layout_alignRight="@+id/nameField2"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/validateIPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/iptext"
        android:layout_alignBottom="@id/iptext"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@id/ipField"
        android:text="Valider l&apos;IP"
        android:textColor="#FFFFFF" />

</RelativeLayout>